Gradle 7 / Java 16 build support (#109)
* Upgade to gradle wrapper 7.0rc1

* Remove duplicate lombok dep; use edge version of lombok for java 16

* Add --add-opens for FieldUtil tests

* have processResources depend on copyMCFontExtractor

* Add java 16 to build matrix

* Experiment with fixing gradle 7 warnings

* Clean up comments

* Bump to gradle 7.0-rc-2

* Switch from lombok edge to a new tagged release

* merge fix - change allprojects to subprojects as root project is no longer a java lib

* Bump gradle wrapper to 7.0 (release)

* Adjust comments